# ky-education-kpi-pipeline

./: .gitignore  2024urls.json  Claude.md  KPIS.md  LICENSE  NOTICE  README.md  claude_pr_review.py  etl_runner.py  pyproject.toml
config/: demographic_mappings.yaml  kde_sources.yaml  mappings.yaml
data/: README.md  download_kde_data.py  index.html  prepare_kde_data.py  styles.css
equity_scorecard.egg-info/: requires.txt
etl/: base_etl.py  chronic_absenteeism.py  constants.py  cte_participation.py  demographic_mapper.py  english_learner_progress.py  enrollment.py  fcps_test_scores.py  graduation_rates.py  kentucky_summative_assessment.py  kindergarten_readiness.py  out_of_school_suspension.py  postsecondary_enrollment.py  postsecondary_readiness.py  safe_schools_climate.py  safe_schools_discipline.py  safe_schools_events.py  student_enrollment.py  template.py
html/: equity_dashboard.html  generate_dashboard_data.py  serve_dashboard.py
kpi/: combine.py
notes/: 1--graduation-rates-analysis.md  10--dashboard-implementation.md  11--kindergarten-readiness-2024-data-issue.md  12--postsecondary-readiness-pipeline-implementation.md  13--ky-dept-education-file-analysis.md  14--target-indicator-search-2024.md  15--out-of-school-suspension-implementation.md  16--postsecondary-enrollment-implementation.md  17--english-learner-progress-implementation.md  18--chronic-absenteeism-implementation.md  19--english-learner-metric-correction.md  2--expanded-kpi-format-implementation.md  20--kyrc24-new-data-sources-investigation.md  21--kyrc24-implementation-roadmap.md  (+65 more)
(+60 files in other folders)
